# kaven

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
deploy/docker/: Dockerfile  docker-compose.yml
deploy/systemd/: kaven.service
docs/: release-notes.md  telegram-faq.md  webapp-checklist.md
rust/crates/commands/src/: lib.rs
rust/crates/rusty-claude-cli/src/: main.rs
scripts/: upstream-sync.sh
src/kaven/: README.md  analyzer.py  com.alis.kaven.plist  config.example.json  config_loader.py  globe_visualization.html  kaven.py  signal_generator.py  version.py
src/kaven/collectors/: __init__.py  adsb_collector.py  ais_collector.py  news_collector.py  social_collector.py
src/kaven/logs/: maven_20260307.jsonl  maven_20260308.jsonl  maven_20260309.jsonl  maven_20260310.jsonl  maven_20260311.jsonl  maven_20260314.jsonl  maven_20260324.jsonl  maven_20260325.jsonl  maven_20260326.jsonl  maven_20260327.jsonl  maven_20260330.jsonl  maven_20260331.jsonl  maven_20260401.jsonl  maven_20260402.jsonl  sent_cache.json
src/maven/: README.md  analyzer.py  com.alis.maven.plist  maven.py
src/maven/collectors/: __init__.py  adsb_collector.py
src/maven/logs/: maven_20260312.jsonl  maven_20260313.jsonl  maven_20260323.jsonl  maven_20260328.jsonl  maven_20260329.jsonl  maven_20260403.jsonl
tests/: test_config_loader.py  test_kaven_dedup.py  test_kaven_log_replay_integration.py
webapp/: README.md
webapp/backend/: app.py
webapp/frontend/: index.html
